@@ -427,8 +427,8 @@ specialOpLocs <- function(text)
 
 
 
-## accessing the help system: should allow anything with an index entry
-## this just looks at packages on the search path.
+## Accessing the help system: should allow anything with an index entry.
+## This just looks at packages on the search path.
 
 matchAvailableTopics <- function(prefix, text)
 {
@@ -548,7 +548,9 @@ keywordCompletions <- function(text)
 
 
 ## 'package' environments in the search path.  These will be completed
-## with a ::
+## with a :: (Use of this is function is replaced by
+## loadedPackageCompletions below, which also completes packages
+## loaded, but not necessarily attached).
 
 
 attachedPackageCompletions <- function(text, add = rc.getOption("package.suffix"))
@@ -568,11 +570,26 @@ attachedPackageCompletions <- function(text, add = rc.getOption("package.suffix"
     else character()
 }
 
+loadedPackageCompletions <- function(text, add = rc.getOption("package.suffix"))
+{
+    ## FIXME: Will not allow fuzzy completions. See comment in keywordCompletions() above
+    if (.CompletionEnv$settings[["ns"]])
+    {
+        s <- loadedNamespaces()
+        comps <- findExactMatches(sprintf("^%s", makeRegexpSafe(text)), s)
+        if (length(comps) && !is.null(add))
+            sprintf("%s%s", comps, add)
+        else
+            comps
+    }
+    else character()
+}
+
 
 
 ## this provides the most basic completion, looking for completions in
 ## the search path using apropos, plus keywords.  Plus completion on
-## attached packages if settings$ns == TRUE
+## attached/loaded packages if settings$ns == TRUE
 
 
 normalCompletions <-
@@ -596,7 +613,7 @@ normalCompletions <-
                     sprintf("%s%s", comps[which.function], add.fun)
             ##sprintf("\033[31m%s\033[0m%s", comps[which.function], add.fun)
         }
-        c(comps, keywordCompletions(text), attachedPackageCompletions(text))
+        c(comps, keywordCompletions(text), loadedPackageCompletions(text))
     }
 }
 
@@ -921,6 +938,10 @@ fileCompletions <- function(token)
 
 .completeToken <- function()
 {
+    ## Allow override by user-specified function
+    custom.completer <- rc.getOption("custom.completer")
+    if (is.function(custom.completer))
+        return (custom.completer(.CompletionEnv))
     text <- .CompletionEnv[["token"]]
     if (isInsideQuotes())
     {
